[gd_scene load_steps=13 format=3 uid="uid://bmt4lmdjvgu2y"]

[ext_resource type="Texture2D" uid="uid://diq0ydwll32bn" path="res://assets/sprites/goblin.png" id="1_fd6ru"]
[ext_resource type="Script" uid="uid://dkomr3l2h31eg" path="res://creature.gd" id="1_nugsn"]
[ext_resource type="Texture2D" uid="uid://btja6qcj833gx" path="res://assets/sprites/highlight.png" id="3_1k0n7"]
[ext_resource type="PackedScene" uid="uid://b1g8u7tv8i1cy" path="res://creature_panel.tscn" id="4_w7hms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fd6ru"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_nugsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_1k0n7"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 1),
"transitions": PackedFloat32Array(2.14355, 0.353553, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-16, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fd6ru"]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w7hms"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.297302),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(16, 32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_frg5k"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.46667, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rxhes"]
resource_name = "selected"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5),
"transitions": PackedFloat32Array(1, 0.366021, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(3.5, 3.5), Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxhes"]
_data = {
&"RESET": SubResource("Animation_nugsn"),
&"attack": SubResource("Animation_1k0n7"),
&"damage": SubResource("Animation_fd6ru"),
&"die": SubResource("Animation_w7hms"),
&"idle": SubResource("Animation_frg5k"),
&"selected": SubResource("Animation_rxhes")
}

[node name="Creature" type="Area2D" node_paths=PackedStringArray("inventory")]
script = ExtResource("1_nugsn")
inventory = [null]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_fd6ru")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_fd6ru")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rxhes")
}
autoplay = "idle"

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.607843)
position = Vector2(0, 16)
scale = Vector2(4, 4)
texture = ExtResource("3_1k0n7")

[node name="Hover" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 16)
scale = Vector2(4, 4)
texture = ExtResource("3_1k0n7")

[node name="CreaturePanel" parent="." instance=ExtResource("4_w7hms")]
offset_top = -32.0
offset_bottom = -32.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
